Fix #jump spacing in style/adrift

--- a/style/adrift/align.css
+++ b/style/adrift/align.css
@@ -26,10 +26,9 @@ nav {
   text-align: center;
 }
 /* align others */
-#klf {
-  text-align: left;
-}
 #jump {
   align-items: center;
-  justify-content: space-around;
+}
+#klf {
+  text-align: left;
 }
